[tool.poetry]
name = "cw-7-drf"
version = "0.1.0"
description = ""
authors = ["Sergey Arefev"]
readme = "README.md"
packages = [{include = "cw_7_drf"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
ipython = "^8.26.0"
getenv = "^0.2.0"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
